kubernetes/apps/home-automation/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
    part-of: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
      part-of: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
        part-of: qbittorrent
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:20.04.1
          ports:
            - name: qbittorrent
              containerPort: 8080

          volumeMounts:
            - name: qbittorrent
              mountPath: /config
            - name: downloads-movies
              mountPath: /downloads/movies
            - name: downloads-series
              mountPath: /downloads/series

          resources:
            limits:
              cpu: 400m
              memory: 600Mi

      volumes:
        - name: qbittorrent
          persistentVolumeClaim:
            claimName: qbittorrent
        - name: downloads-series
          persistentVolumeClaim:
            claimName: downloads-series
        - name: downloads-movies
          persistentVolumeClaim:
            claimName: downloads-movies
